--- a/erwan-iquel-ila/src/Footer.css
+++ b/erwan-iquel-ila/src/Footer.css
@@ -1,8 +1,7 @@
-.sticky-form {
+.footer {
     position: fixed;
-    bottom: 60px;
+    bottom: 0;
     width: 100%;
     height: 60px;
     line-height: 60px;
-    background-color: #f5f5f5;
 }
